# django-cli-worktool

./: .gitignore  404.html  README.md  index.html  pyproject.toml  setup.py
commands/: index.html
django_facile/: cli.py
django_facile/commands/: addredis.py  check.py  createapp.py  migrate.py  runserver.py  shell.py  startproject.py  static.py  superuser.py  switchEnv.py
django_facile/generators/: create_app.py  create_env.py  create_project.py  setup_database.py  setup_settings.py  switching_env.py
django_facile_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: mkdocs.yml
docs/docs/: commands.md  index.md  installation.md  workflow.md
docs/site/: 404.html
docs/site/commands/: index.html
docs/site/installation/: index.html
docs/site/search/: search_index.json
installation/: index.html
search/: search_index.json
workflow/: index.html
